[gd_scene load_steps=3 format=3 uid="uid://dcc4r7xsm7emd"]

[ext_resource type="Script" uid="uid://so5xr1lb8ywh" path="res://CategoryMenu.gd" id="1_ogx67"]
[ext_resource type="Script" uid="uid://6anl00e5dn6" path="res://SoundButton.gd" id="2_1uj23"]

[node name="CategoryMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ogx67")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ConjugationBtn" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Conjugation"
script = ExtResource("2_1uj23")

[node name="PhrasalBtn" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Phrasal Verbs (Get up/out...)"
script = ExtResource("2_1uj23")

[node name="MixedBtn" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Mixed Questions"
script = ExtResource("2_1uj23")

[node name="Label" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 444.0
offset_top = 76.0
offset_right = 707.0
offset_bottom = 169.0
bbcode_enabled = true
text = "[center][wave freq=5][font_size=40px]Select Topic"
